2005-10-06  Derek Price  <derek@ximbiot.com>

	* clmerge.in, cln_hist.in, commit_prep.in, cvs_acls.in, log.in,
	log_accum.in, mfpipe.in, pvcs2rcs.in, rcslock.in, validate_repo.in:
	Rename these to...
	* clmerge.pl, cln_hist.pl, commit_prep.pl, cvs_acls.pl, log.pl,
	log_accum.pl, mfpipe.pl, pvcs2rcs.pl, rcslock.pl, validate_repo.pl:
	These.

	* log_accum.in (change_summary): Output `dead' for deleted revision
	number, rather than `0'.

	* log_accum.in ($UseNewInfoFmtStrings): Default to true.

	* log_accum.in ($CVSROOT): Remove global.
	(change_summary): Use %V & %v rather than `cvs status' and math to
	determine oldrev and newrev.  Send diffs for added and removed files.
	(process_argv): Attempt to read $update_dir from the command line.
	Handle new %V & %v args.

	* log_accum.in: Remove cruft for calculating dest email address, which
	was specific to cvshome.org, in favor of accepting a list of
	destination email addresses on the command line.

	* log_accum.in: Initialize new branch tracking vars.  Keep track of
	branch when found.  When -r specified, only send mail when branch
	matches.
	(derive_subject_from_changes_file): Add branch to subject line.
	(process_argv): Consolidate arg processing for new and old format
	string styles.  Parse new -r option.
	(Original patch from Richard M. Stallman <rms@gnu.org>.)

	* validate_repo.in (main): Remove trailing slashes from CVSROOT.
	(Original patch from Erik Cumps <erik.cumps@icos.be>.)

2005-10-04  Mark D. Baushke  <mdb@gnu.org>

	* rcs-5.7-commitid.patch: Initialize Delta->commitid.

2005-10-03  Larry Jones  <lawrence.jones@ugs.com>

	* validate_repo.in (get_history): Fix bug in previous change.
	* validate_repo.in (get_history): Compensate for timezone info in
	cvs log output.

2005-09-30  Mark D. Baushke  <mdb@gnu.org>

	* rcs-5.7-commitid.patch: Convert diff timestamps to UTC.
	Acknowledge Paul Eggert's help.
	* rcs-5.7-sameuserlocks.patch: Patch from James Olin Oden allows