@@ -1,3 +1,9 @@
+2005-10-11  Derek Price  <derek@ximbiot.com>
+
+	* log_accum.pl: Allow arbitrary arguments to be specified for
+	`cvs diff' when generating diffs.  Allow diff creation to be switched
+	on the command line.
+
 2005-10-06  Derek Price  <derek@ximbiot.com>
 
 	* clmerge.in, cln_hist.in, commit_prep.in, cvs_acls.in, log.in,
